--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <a-entity
+            <a-box
             position="0 0 0"
             rotation="0 0 0"
             scale="0.05 0.05 0.05"
-            gltf-model="scene.gltf"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
