--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             position="0 0 0"
             rotation="0 0 0"
             scale="1 1 1"
-            gltf-model="https://swatheesh.github.io/Rubix_Cube.glb"
+            gltf-model="https://swatheesh.github.io/xbox_controller.glb"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
