Added New Xbox Controller 3D Model

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <a-scene embedded arjs>
         <a-marker preset="hiro">
             <a-entity
-            position="0 -10 -10"
-            rotation="270 0 0"
+            position="0 0 0"
+            rotation="0 0 0"
             scale="1 1 1"
-            gltf-model="https://swatheesh.github.io/xbox_controller.glb"
+            gltf-model="https://swatheesh.github.io/New1.glb"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
