--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <a-scene embedded arjs>
         <a-marker preset="hiro">
             <a-entity
-            position="0 -10 0"
-            rotation="0 -45 0"
-            scale="3 3 3"
-            gltf-model="https://swatheesh.github.io/New1.glb"
+            position="0 0 0"
+            rotation="0 0 0"
+            scale="2 2 2"
+            gltf-model="https://swatheesh.github.io/xbox_controller.glb"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
