--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             scale="3 3 3"
             gltf-model="https://swatheesh.github.io/xbox_controller.glb"
             ></a-entity>
+            <!--gltf-model="https://swatheesh.github.io/xbox_controller.glb"-->
         </a-marker>
         <a-entity camera></a-entity>
         </a-scene>
